...
                                <include reference="MGK-BL-CNi"/>
                                <include reference="PGX-G8-Lfc"/>
                                <include reference="tB0-4p-zwp"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Profiles" id="19z-PS-QbB"/>
                    <connections>
                        <outlet property="contentView" destination="ftC-ca-fD3" id="3Wd-dU-4rU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="PKn-gx-2g9" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                                        <include reference="sZg-mz-owy"/>
                                    </mask>
                                </variation>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SVK-rZ-fTs">
                                <rect key="frame" x="186" y="233" width="42" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="displayName"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Banana Recipe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kt-D5-40C">
                                <rect key="frame" x="110.5" y="295" width="193" height="21"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8j-WV-LgD">
                                <rect key="frame" x="87" y="324" width="240" height="160"/>
                                <accessibility key="accessibilityConfiguration" identifier="favRecipe"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="160" id="Wol-Uf-SWk"/>
                                    <constraint firstAttribute="width" constant="240" id="hn8-Wv-iY5"/>
                                </constraints>
                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla paria
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
