...
                                    <constraint firstAttribute="width" constant="113" id="ETy-yu-aZG"/>
                                    <constraint firstAttribute="width" constant="113" id="GOC-I3-Vib"/>
                                    <constraint firstAttribute="height" constant="59" id="X0G-lZ-9FQ"/>
                                    <constraint firstAttribute="width" constant="113" id="bSD-7W-N46"/>
                                    <constraint firstAttribute="height" constant="59" id="naO-dh-Xpu"/>
                                </constraints>
                                <state key="normal" title="Start" image="start">
                                    <color key="titleColor" red="0.9064346002" green="0.90421434860000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="6lR-oR-b5A"/>
                                        <exclude reference="ETy-yu-aZG"/>
...
                                    <constraint firstAttribute="height" constant="59" id="UVC-eb-vhJ"/>
                                    <constraint firstAttribute="width" constant="113" id="Ve5-jJ-fXF"/>
                                    <constraint firstAttribute="height" constant="59" id="hk4-Ka-k0A"/>
                                    <constraint firstAttribute="width" constant="113" id="kCO-BE-URv"/>
                                    <constraint firstAttribute="height" constant="59" id="oWb-xC-JKs"/>
                                </constraints>
                                <state key="normal" title="Stop" image="stop">
                                    <color key="titleColor" red="0.9064346002" green="0.90421434860000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="I0A-7f-2S9"/>
                                        <exclude reference="UVC-eb-vhJ"/>
...
                                    <constraint firstAttribute="width" constant="208" id="Faa-qe-URh"/>
                                    <constraint firstAttribute="width" constant="208" id="Q6s-7Q-K34"/>
                                    <constraint firstAttribute="width" constant="208" id="UT0-Vf-9Gl"/>
                                    <constraint firstAttribute="height" constant="32" id="laj-Uy-ubz"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <state key="normal" title="See previous study records"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="CX0-oK-EYS"/>
                                        <exclude reference="EUJ-OF-HKl"/>
                                        <exclude reference="Faa-qe-URh"/>
                                        <exclude reference="Q6s-7Q-K34"/>
...
                                <include reference="7fo-Mi-r7Q"/>
                                <include reference="fVq-D1-LFt"/>
                                <include reference="mmf-2m-0X1"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Study Tracker" id="LQ2-vu-DaU">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="setting icon" style="done" id="KX7-Ne-5yF">
                            <connections>
                                <action selector="popBtnShow:" destination="Ohn-Lj-sdJ" id="3av-E6-IyM"/>
                                <segue destination="SDC-Qq-3o8" kind="popoverPresentation" identifier="showPopover" popoverAnchorBarButtonItem="KX7-Ne-5yF" id="i6y-RD-jyc">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
...
                                </constraints>
                                <viewLayoutGuide key="safeArea" id="76L-S6-NZg"/>
                            </stackView>
                            <stackView autoresizesSubviews="NO" opaque="NO" contentMode="right" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yif-Uw-HWO">
                                <rect key="frame" x="208" y="57" width="120" height="190"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type alarm name" textAlignment="right" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kKR-QB-38k">
                                        <rect key="frame" x="9" y="0.0" width="111" height="40"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="changeLabelField:" destination="SDC-Qq-3o8" eventType="editingDidEnd" id="doV-Pa-wgv"/>
...
